--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
 /* Common */
 body {overflow-x: hidden;font-family: 'Helvetica', 'nanumsquare', 'sans-serif'}
 .container {width: 1370px;margin: 0 auto;padding-left: 250px;transition: all 0.4s;}
-.container.header_on {padding-left: 0;}
+.container.header_off {padding-left: 0;}
 #skill img {width: 90px;}
 
 .skip_nav a {display: block;position: absolute;top: -60px;left: 0;right: 0;background: #00ccff;text-align: center;line-height: 60px;font-weight: bold;font-size: 20px;color: #FFF}
