--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
 }
 @font-face {
   font-family: 'HelveticaL';
-  src: url(../font/Helvetica_Light.ttf) format('ttf');
+  src: url(../font/HelveticaL.woff) format('woff');
 }
 
 /* Font, Color
@@ -45,7 +45,7 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #header.header_off {left: -250px;}
 #header button {position: absolute;top: 0;right: -40px;box-sizing:border-box;width: 40px;height: 40px;background: #0CF;border-bottom: 2px solid #000;border-right: 2px solid #000;border-radius:0 0 50% 0;}
 #header .header_inner {display: flex;flex-flow:column nowrap;justify-content: space-between;box-sizing:border-box;height: 100%;padding-left: 30px;padding-top: 100px;}
-#header .header_inner span {font-family: 'HelveticaL';margin-bottom: 30px;font-weight: 300;color: #FFF;}
+#header .header_inner span {margin-bottom: 30px;font-family: 'HelveticaL';font-weight: 300;color: #FFF;}
 #header .header_inner span b {display: block;margin-bottom: 17px;font-family: 'Helvetica Rounded';font-size: 24px;}
 
 #gnb li a {display: block;margin-bottom: 20px;font-size: 14px;color: #FFF;}
@@ -60,6 +60,8 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #profile .section_inner {padding: 0 110px;}
 #profile .myInfo {display: flex;justify-content: space-between;align-items: center;height: 100%;}
 #profile .myInfo .myImg {display: block;box-sizing:border-box;width: 280px;height: 280px;border: 2px solid #0AF;border-radius:50%;background: #FFF;}
+#profile .address span {font-family: 'HelveticaL';font-weight: 300;font-size: 20px;}
+#profile .address span b {display: block;margin-bottom: 20px;font-family: 'nanumsquare';font-size: 24px;font-weight: 700;letter-spacing: .1em;}
 
 /* Skill */
 #skill img {width: 90px;}
