--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,16 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #profile .career li:before {content:'';display: block;position: absolute;left: -17px;top: 50%;transform:translateY(-50%) rotate(45deg);width: 9px;height: 9px;background: #0AF;}
 
 /* Skill */
-#skill img {width: 90px;}
+#skill .section_inner {box-sizing:border-box;padding: 74px 110px 74px 140px;}
+#skill img {width: 90px;vertical-align: top;}
+#skill ul {display: flex;flex-flow:row wrap;align-content:space-between;height: 100%;}
+#skill ul li {position: relative;width: 33.33333333%;}
+.progress_bar {position: absolute;left: 90px;top: 54px;box-sizing:border-box;width: 248px;height: 30px;border: 2px solid #0AF;border-left: none;background: #FFF;border-radius:0 15px 15px 0;}
+/* rProgress플러그인 css수정 */
+.progressbar {margin-top: 2px;}
+.progress {border-radius:0 15px 15px 0;}
+.percentCount {position: absolute;right: 0;margin-top: -60px;font-family: 'Helvetica';font-size: 24px;font-weight: 400;color: #000;}
+
 /* Project */
 #project img {width: 300px;}
 /* Work */
