--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
 */
 
 /* Common */
-body {overflow-x: hidden;font-family: 'Helvetica', 'nanumsquare', 'sans-serif'}
+body {overflow-x: hidden;font-family: 'Helvetica', 'NanumSquare', 'sans-serif'}
 .container {width: 1370px;margin: 0 auto;padding-left: 250px;transition: all 0.4s;}
 .container.header_off {padding-left: 0;}
 #main {background: url(../img/pattern_bg.png);}
@@ -54,14 +54,14 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 /* Main_visual */
 #main .main_visual {height: 100vh;background:url(../img/main_bg.png) center top;}
 #main .main_visual p {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-family: 'Cafe24Ssurround';font-size: 60px;color: #FFF;white-space: nowrap;}
-#main .main_visual p mark {color: #0CF}
-
+/* #main .main_visual p mark {color: #0CF} */
+#main .tlt .word4 .char1, #main .tlt .word4 .char2 {color: #0CF}
 /* Profile */
 #profile .section_inner {padding: 0 110px;}
 #profile .myInfo {display: flex;justify-content: space-between;align-items: center;height: 100%;}
 #profile .myInfo .myImg {display: block;box-sizing:border-box;width: 280px;height: 280px;border: 2px solid #0AF;border-radius:50%;background: #FFF;}
 #profile .address span {display: block;margin-bottom: 70px;font-family: 'HelveticaL'; font-size: 20px;}
-#profile .address span b {display: block;margin-bottom: 20px;font-family: 'nanumsquare';font-size: 24px;font-weight: 700;letter-spacing: .1em;}
+#profile .address span b {display: block;margin-bottom: 20px;font-family: 'NanumSquare';font-size: 24px;font-weight: 700;letter-spacing: .1em;}
 #profile .address li {margin-bottom: 20px;font-family: 'HelveticaL';font-size: 18px;}
 #profile .address li:last-child {margin-bottom: 0;}
 #profile .address li b {margin-right: 20px;font-family: 'nanumsquare';font-weight: 700;letter-spacing: .1em;}
@@ -78,11 +78,38 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 /* rProgress플러그인 css수정 */
 .progressbar {margin-top: 2px;}
 .progress {border-radius:0 15px 15px 0;}
-.percentCount {position: absolute;right: 0;margin-top: -60px;font-family: 'Helvetica';font-size: 24px;font-weight: 400;color: #000;}
+.percentCount {position: absolute;right: 0;margin-top: -60px;font-family: 'Helvetica';font-size: 28px;font-weight: 400;color: #000;}
+.percentCount i {font-size: 18px;}
 
 /* Project */
-#project img {width: 300px;}
+#project .section_inner {padding: 0 240px 0 150px;}
+#project .projects>div {display: flex;justify-content:space-between;}
+#project .projects>div[class*=project] {display: none;}
+#project img {width: 350px;}
+#project .btn_proj {display: block;overflow: hidden;z-index: 99;position: absolute;top: 30px;box-sizing:border-box;width: 200px;height: 40px;border: 2px solid #0AF;border-radius:20px;background: #FFF;transition:all 0.3s;}
+#project .btn_proj.proj_on {height: 150px;}
+#project .btn_proj ul {text-indent: 20px;font-size: 20px;font-weight: 700;line-height: 36px;}
+#project .proj_info, #project .proj_intro p{padding-top: 110px;}
+#project .proj_intro p {font-size: 18px;} 
+#project .projects img {margin-top: 58px;}
+#project .proj_info li {position: relative;font-family: 'NanumSquare';margin-bottom: 34px;font-weight: 700;font-size: 18px;}
+#project .proj_info li:before {content:'';display: block;position: absolute;left: -17px;top: 50%;transform:translateY(-50%) rotate(45deg);width: 9px;height: 9px;background: #0AF;}
+#project .btn_proj ul:before {content:'';display: block;position: absolute;right: 16px;top: 14px;z-index: 999;width: 12px;height: 7px;background-image:url(../img/proj_chevron.png);background-size: 12px 7px;transition:all 0.3s;}
+#project .btn_proj.proj_on ul:before {transform-origin : center;transform:perspective(300px) rotateX(180deg);}
+#project .projInfo_wrap a {display: block;font-size: 16px;}
 /* Work */
-#work {background: #dffbff;}
-#work ul {height: 430px;}
+#work {position: relative;padding: 60px 0 110px;background: #dffbff;}
+#work h2 {padding-bottom: 20px;}
+#work ul {display: flex;justify-content:space-between;height: 430px;}
+#work li {overflow: hidden;width: calc(33.33333333% - 76px / 3);height: 100%;border-radius:20px;background: #FFF;}
+#work a {display: block;width: 100%;height: 100%;background-position: top center;background-repeat: no-repeat;}
+#work li:nth-child(1) a {background-image: url(../img/work_medipreview.png);background-size: 100% auto;}
+#work li:nth-child(2) a {background-image: url(../img/work_calendar.png);background-size: auto 100%;}
 /* Contact */
+#contact .section_inner {padding: 66px 485px 32px;}
+#contact form {display: flex;flex-flow:column nowrap;justify-content: space-between;align-items:center;height: 100%;}
+#contact form input, #contact form textarea {box-sizing:border-box;width: 100%;font-family: 'NanumSquare';border: 2px solid #0AF;line-height: 30px;font-size: 20px;text-indent: 4px;outline: none;}
+#contact form input {height: 40px;}
+#contact form textarea {height: 120px;resize:none;}
+#contact form input::placeholder, #contact form textarea::placeholder {font-family: 'NanumSquare';font-size: 20px;text-indent: 4px;color: #000;}
+#contact button {width: 200px;height: 40px;border-radius:20px;background: #0AF;font-size: 20px;font-weight: 700;color: #FFF;}
