--- a/css/main.css
+++ b/css/main.css
@@ -41,14 +41,15 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 /* Util */
 .skip_nav a {display: block;position: absolute;top: -60px;left: 0;right: 0;background: #0CF;text-align: center;line-height: 60px;font-weight: bold;font-size: 20px;color: #FFF}
 .skip_nav a:focus {top: 0}
-.util .scrollTop {display: block;position: fixed;right: 0;top: 0;z-index:999;width: 36px;border-left: 2px solid #000;border-bottom: 2px solid #000;border-radius: 0 0 0 4px;background: #0CF;line-height: 26px;font-weight: bold;text-align: center;color: #FFF}
+.util .scrollTop {display: block;position: fixed;right: 0;top: 0;z-index:999;width: 44px;border-left: 2px solid #000;border-bottom: 2px solid #000;border-radius: 0 0 0 4px;background: #0CF;line-height: 26px;font-weight: bold;text-align: center;color: #FFF}
+.util .scrollTop i {font-size: 12px;}
 .util a {display: block;position: fixed;right: 40px;box-sizing:border-box;bottom: 40px;z-index:999;width: 60px;border: 2px solid #000;border-radius:50%;background: #0CF;line-height: 56px;text-align: center;font-size: 18px;color: #FFF;}
 
 /* Header */
 #header {position: fixed;z-index:999;left: 0;top: 0;bottom: 0;width: 250px;background: #0AF;transition:all 0.4s}
 #header.header_off {left: -250px;}
 #header button {position: absolute;top: 0;right: -40px;box-sizing:border-box;width: 40px;height: 40px;background: #0CF;border-bottom: 2px solid #000;border-right: 2px solid #000;border-radius:0 0 50% 0;}
-#header .header_inner {display: flex;flex-flow:column nowrap;justify-content: space-between;box-sizing:border-box;height: 100%;padding-left: 30px;padding-top: 100px;}
+#header .header_inner {display: flex;flex-flow:column nowrap;justify-content: space-between;box-sizing:border-box;height: 100%;padding-left: 30px;padding-top: 140px;}
 #header .header_inner span {margin-bottom: 30px;font-family: 'HelveticaL';font-weight: 300;color: #FFF;}
 #header .header_inner span b {display: block;margin-bottom: 17px;font-family: 'Helvetica Rounded';font-size: 24px;}
 
@@ -57,9 +58,10 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 
 /* Main_visual */
 #main .main_visual {height: 100vh;background:url(../img/main_bg.png) center top;}
-#main .main_visual p {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-family: 'Cafe24Ssurround';font-size: 60px;color: #FFF;white-space: nowrap;}
-/* #main .main_visual p mark {color: #0CF} */
+#main .main_visual h1 {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-family: 'Cafe24Ssurround';font-size: 60px;color: #FFF;white-space: nowrap;}
 #main .tlt .word4 .char1, #main .tlt .word4 .char2 {color: #0CF}
+#main .tlt .word1 {display: block !important;margin-bottom: 40px;}
+
 /* Profile */
 #profile .section_inner {padding: 0 110px;}
 #profile .myInfo {display: flex;justify-content: space-between;align-items: center;height: 100%;}
@@ -69,6 +71,7 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #profile .address li {margin-bottom: 20px;font-family: 'HelveticaL';font-size: 18px;}
 #profile .address li:last-child {margin-bottom: 0;}
 #profile .address li b {margin-right: 20px;font-family: 'nanumsquare';font-weight: 700;letter-spacing: .1em;}
+#profile .career {height: 192px;}
 #profile .career li {position: relative;margin-bottom: 24px;font-size: 18px;}
 #profile .career li:last-child {margin-bottom: 0;}
 #profile .career li:before {content:'';display: block;position: absolute;left: -17px;top: 50%;transform:translateY(-50%) rotate(45deg);width: 9px;height: 9px;background: #0AF;}
@@ -88,10 +91,10 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 /* Project */
 #project .section_inner {padding: 0 240px 0 200px;}
 #project .projects>div {display: flex;justify-content:space-between;}
-#project .projects>div[class*=project] {display: none;}
+#project .projects>.project:not(.project1) {display: none;}
 #project img {width: 350px;}
 #project .btn_proj {display: block;overflow: hidden;z-index: 99;position: absolute;top: 30px;box-sizing:border-box;width: 200px;height: 40px;border: 2px solid #0AF;border-radius:20px;background: #FFF;transition:all 0.3s;}
-#project .btn_proj.proj_on {height: 150px;}
+#project .btn_proj.proj_on {height: 120px;}
 #project .btn_proj ul {text-indent: 20px;font-size: 20px;font-weight: 700;line-height: 36px;}
 #project .proj_info, #project .proj_intro p{padding-top: 110px;}
 #project .proj_intro p {font-size: 18px;} 
@@ -100,7 +103,7 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #project .proj_info li:before {content:'';display: block;position: absolute;left: -17px;top: 50%;transform:translateY(-50%) rotate(45deg);width: 9px;height: 9px;background: #0AF;}
 #project .btn_proj ul:before {content:'';display: block;position: absolute;right: 16px;top: 14px;z-index: 999;width: 12px;height: 7px;background-image:url(../img/proj_chevron.png);background-size: 12px 7px;transition:all 0.3s;}
 #project .btn_proj.proj_on ul:before {transform-origin : center;transform:perspective(300px) rotateX(180deg);}
-#project .projInfo_wrap a {display: block;font-size: 16px;}
+#project .projInfo_wrap a {display: block;width: 160px;border-radius:20px;background: #0AF;line-height: 40px;font-family: 'NanumSquare';font-size: 20px;font-weight: 700;text-align: center;color: #FFF;}
 #project .btn_proj li:not(.current_proj):hover {color: #0AF;}
 /* Work */
 #work {position: relative;padding: 60px 0 110px;background: #dffbff;}
@@ -110,10 +113,11 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #work a {display: block;width: 100%;height: 100%;background-position: top center;background-repeat: no-repeat;}
 #work li:nth-child(1) a {background-image: url(../img/work_medipreview.png);background-size: 100% auto;}
 #work li:nth-child(2) a {background-image: url(../img/work_calendar.png);background-size: auto 100%;}
+#work li:nth-child(3) a {background-image: url(../img/work_band_banner.png);background-size: auto 100%;}
 /* Contact */
-#contact .section_inner {padding: 66px 485px 32px;}
+#contact .section_inner {padding: 66px 0 32px;}
 #contact form {display: flex;flex-flow:column nowrap;justify-content: space-between;align-items:center;height: 100%;}
-#contact form input, #contact form textarea {box-sizing:border-box;width: 100%;font-family: 'NanumSquare';border: 2px solid #0AF;line-height: 30px;font-size: 20px;text-indent: 4px;outline: none;}
+#contact form input, #contact form textarea {box-sizing:border-box;width: 400px;font-family: 'NanumSquare';border: 2px solid #0AF;line-height: 30px;font-size: 20px;text-indent: 4px;outline: none;}
 #contact form input {height: 40px;}
 #contact form textarea {height: 120px;resize:none;}
 #contact form input::placeholder, #contact form textarea::placeholder {font-family: 'NanumSquare';font-size: 20px;text-indent: 4px;color: #000;}
