--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 */
 
 /* Common */
-body {overflow: hidden;font-family: 'Helvetica', 'NanumSquare', 'sans-serif'}
+body {overflow-x:hidden;font-family: 'Helvetica', 'NanumSquare', 'sans-serif'}
 .container {width: 1370px;margin: 0 auto;padding-left: 250px;transition: all 0.4s;}
 .container.header_off {padding-left: 0;}
 #main {background: url(../img/pattern_bg.png);}
@@ -64,8 +64,9 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 
 /* Profile */
 #profile .section_inner {padding: 0 110px;}
+#profile .myInfo .myImg_addr_wrap {display: flex;align-items:center;}
 #profile .myInfo {display: flex;justify-content: space-between;align-items: center;height: 100%;}
-#profile .myInfo .myImg {display: block;box-sizing:border-box;width: 280px;height: 280px;border: 2px solid #0AF;border-radius:50%;background: #FFF;}
+#profile .myInfo .myImg {display: block;box-sizing:border-box;width: 280px;height: 280px;margin-right: 100px;border: 2px solid #0AF;border-radius:50%;background: #FFF;}
 #profile .address span {display: block;margin-bottom: 70px;font-family: 'HelveticaL'; font-size: 20px;}
 #profile .address span b {display: block;margin-bottom: 20px;font-family: 'NanumSquare';font-size: 24px;font-weight: 700;letter-spacing: .1em;}
 #profile .address li {margin-bottom: 20px;font-family: 'HelveticaL';font-size: 18px;}
@@ -109,7 +110,7 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #work {position: relative;padding: 60px 0 110px;background: #dffbff;}
 #work h2 {padding-bottom: 20px;}
 #work ul {display: flex;justify-content:space-between;height: 430px;}
-#work li {overflow: hidden;width: calc(33.33333333% - 76px / 3);height: 100%;border-radius:20px;background: #FFF;}
+#work li {overflow: hidden;width: calc(33.33333333% - 76px / 3);border-radius:20px;background: #FFF;}
 #work a {display: block;width: 100%;height: 100%;background-position: top center;background-repeat: no-repeat;}
 #work li:nth-child(1) a {background-image: url(../img/work_medipreview.png);background-size: 100% auto;}
 #work li:nth-child(2) a {background-image: url(../img/work_calendar.png);background-size: auto 100%;}
@@ -122,3 +123,22 @@ section h2 {font-family: 'Helvetica Rounded';font-size: 30px;text-align: center;
 #contact form textarea {height: 120px;resize:none;}
 #contact form input::placeholder, #contact form textarea::placeholder {font-family: 'NanumSquare';font-size: 20px;text-indent: 4px;color: #000;}
 #contact button {width: 200px;height: 40px;border-radius:20px;background: #0AF;font-size: 20px;font-weight: 700;color: #FFF;}
+
+/* 노트북 대비 반응형 */
+@media screen and (max-width:1370px) {
+  #header {display: none;}
+  .container {width: 90%;min-width:920px;padding-left: 0;}
+  #profile .section_inner {height: 600px;padding: 0;}
+  #profile .myInfo {flex-wrap:wrap;justify-content: space-around;}
+  #profile .myInfo .myImg_addr_wrap {width: 100%;justify-content: center;}
+  #profile .myInfo .career {height: auto;align-self: flex-start;}
+
+  #skill .section_inner {height: 600px;padding: 0;padding-left: 40px;}
+  #skill ul {justify-content:center;align-content: space-around;}
+  #skill ul li {width: 40%;}
+
+  #project .section_inner {padding: 0 100px 0 200px;}
+
+  #work ul {height: auto;}
+  #work li a {padding-top: 100%;height: 0;}
+}
